alignment fixes

--- a/src/containers/NewCampaignContainer/NewCampaignContainer.scss
+++ b/src/containers/NewCampaignContainer/NewCampaignContainer.scss
@@ -69,7 +69,9 @@
   top: 140px;
   }
   .modal-body {
-    padding: 20px;
+    padding-top: 65px!important;
+    margin-left: -20px;
+    margin-right: -60px;
     color: #097fff !important;
     font-size: 17px !important;
   }
